<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Principal">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etNombre"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/nombre" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etTelefono"
        android:layout_below="@+id/etNombre"
        android:layout_alignRight="@+id/etNombre"
        android:layout_alignEnd="@+id/etNombre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/telefono" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etFecha"
        android:layout_below="@+id/etTelefono"
        android:layout_alignRight="@+id/etTelefono"
        android:layout_alignEnd="@+id/etTelefono"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/fecha" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/insertar"
        android:id="@+id/btAlta"
        android:layout_below="@+id/etFecha"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="alta" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lvJugadores"
        android:layout_below="@+id/btAlta"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
