<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.aitor.pruebabasedatos.Partidos">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etVal"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/valoracion" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etContri"
        android:layout_below="@+id/etVal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/contrincante" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_below="@id/etContri"
        android:layout_height="wrap_content"
        android:id="@+id/layout">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/insertap"
            android:id="@+id/button"
            android:layout_below="@+id/etContri"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="alta"
            android:layout_weight="1" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/media"
            android:onClick="vermedia"
            android:id="@+id/button2"
            android:layout_weight="1" />
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lvPartido"
        android:layout_below="@+id/layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
